# notes_converter

./: .gitignore  LICENSE  README.md  TODO.md  TODO.txt  pyproject.toml  requirements.txt
data/: data_maps.json  standard_works_order.json
data/sqlite3/: temp.sqlite3
notes_converter/: __main__.py  cli.py  gui.py  notes_converter.py  utils.py
notes_converter/utils/: check.py  decorators.py  exceptions.py  load.py  sort.py  write.py
src/notes_converter/: __init__.py  __main__.py  converter.py  gui.py
src/notes_converter/utils/: check.py  constants.py  convert.py  converters.py  database.py  loaders.py  write.py  writers.py
templates/: default.docx
